src/shell/snapshots/mise__shell__xonsh__tests__prepend_env.snap
---
source: src/shell/xonsh.rs
expression: "replace_path(&sh.prepend_env(\"PATH\", \"/some/dir:/2/dir\"))"
---
from os               import environ
from xonsh.built_ins  import XSH

envx = XSH.env
envx[   'PATH'].add('/some/dir:/2/dir', front=True)
environ['PATH'] = envx.get_detyped('PATH')

