src/shell/snapshots/mise__shell__xonsh__tests__set_env.snap
---
source: src/shell/xonsh.rs
expression: "Xonsh::default().set_env(\"FOO\", \"1\")"
snapshot_kind: text
---
from xonsh.built_ins import XSH
XSH.env['FOO'] = '1'
