src/shell/snapshots/mise__shell__xonsh__tests__unset_env.snap
---
source: src/shell/xonsh.rs
expression: "Xonsh::default().unset_env(\"FOO\")"
snapshot_kind: text
---
from xonsh.built_ins import XSH
XSH.env.pop('FOO',None)
