src/shell/snapshots/mise__shell__xonsh__tests__xonsh_deactivate.snap
---
source: src/shell/xonsh.rs
expression: replace_path(&deactivate)
---
import os
from xonsh.built_ins import XSH

hooks = {
  'on_pre_prompt' : ['mise_hook'],
  'on_chdir': ['mise_hook'],
}
for hook_type, hook_fns in hooks.items():
  for hook_fn in hook_fns:
    hndl = getattr(XSH.builtins.events, hook_type)
    for fn in hndl:
      if fn.__name__ == hook_fn:
        hndl.remove(fn)
        break

XSH.aliases.pop('mise', None)
XSH.env.pop('MISE_SHELL', None)
XSH.env.pop('__MISE_DIFF', None)
XSH.env.pop('__MISE_SESSION', None)
XSH.env.pop('__MISE_LOOKUP_EXE', None)
XSH.env.pop('__MISE_LOOKUP_ERROR', None)
